--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "",
   "keywords": [],
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "dev": "npx nodemon src/index.ts"
   },
   "dependencies": {
     "axios": "^1.1.3",
