--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mp-manager",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "build/index.js",
   "author": "Wilhelm Mauch",
   "license": "ISC",
@@ -10,14 +10,17 @@
     "start": "nodemon",
     "dev": "npx nodemon src/index.ts",
     "find": "npx nodemon src/tasks/find.ts  --ext ts",
+    "email": "npx nodemon src/tasks/email.ts  --ext ts",
     "populate": "npx nodemon src/tasks/populate.ts  --ext ts"
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.2",
+    "@types/nodemailer": "^6.4.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
