--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
     "start": "nodemon",
     "dev": "npx nodemon src/index.ts",
     "find": "npx nodemon src/tasks/find.ts  --ext ts",
-    "email": "npx nodemon src/tasks/email.ts  --ext ts",
+    "event": "npx nodemon src/tasks/event.ts  --ext ts",
     "populate": "npx nodemon src/tasks/populate.ts  --ext ts"
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "dotenv": "^16.0.3",
-    "nodemailer": "^6.9.1"
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.2",
-    "@types/nodemailer": "^6.4.7",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
 }
