--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "json-2-csv": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.2",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
