--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mp-manager",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "build/index.js",
   "author": "Wilhelm Mauch",
   "license": "ISC",
@@ -8,6 +8,7 @@
   "keywords": [],
   "scripts": {
     "start": "nodemon",
+    "sql": "npx nodemon src/services/sql.ts",
     "dev": "npx nodemon src/index.ts",
     "badge": "npx nodemon src/tasks/badges.ts --ext ts",
     "find": "npx nodemon src/tasks/find.ts  --ext ts",
@@ -17,10 +18,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
-    "json-2-csv": "^4.1.0"
+    "json-2-csv": "^4.1.0",
+    "sql.js": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.2",
+    "@types/sql.js": "^1.4.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
