--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "populate": "npx nodemon src/tasks/populate.ts  --ext ts"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "json-2-csv": "^4.1.0",
+    "mongoose": "^8.2.1",
     "sql.js": "^1.8.0"
   },
   "devDependencies": {
