--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mp-manager",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "main": "build/index.js",
   "author": "Wilhelm Mauch",
   "license": "ISC",
@@ -15,12 +15,14 @@
     "download": "npx nodemon src/tasks/download.ts  --ext ts",
     "event": "npx nodemon src/tasks/event.ts  --ext ts",
     "event_": "npx node build/tasks/event.js",
+    "eventbrite": "npx nodemon src/api/eventbrite.ts",
     "populate": "npx nodemon src/tasks/populate.ts  --ext ts"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
+    "eventbrite": "^1.3.0",
     "json-2-csv": "^5.5.1",
     "mongoose": "^8.2.1",
     "sql.js": "^1.8.0",
