--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "find": "npx nodemon src/tasks/find.ts  --ext ts",
     "download": "npx nodemon src/tasks/download.ts  --ext ts",
     "event": "npx nodemon src/tasks/event.ts  --ext ts",
-    "event_": "npx node build/tasks/event.js",
+    "youthWeek": "npx nodemon src/tasks/youthWeek.ts  --ext ts",
     "eventbrite": "npx nodemon src/api/eventbrite.ts",
-    "populate": "npx nodemon src/tasks/populate.ts  --ext ts"
+    "populate": "npx nodemon src/tasks/populate.ts  --ext ts",
+    "event_": "npx node build/tasks/event.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -24,6 +25,7 @@
     "dotenv": "^16.0.3",
     "eventbrite": "^1.3.0",
     "json-2-csv": "^5.5.1",
+    "libphonenumber-js": "^1.11.4",
     "mongoose": "^8.2.1",
     "sql.js": "^1.8.0",
     "xregexp": "^5.1.1"
