--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mp-manager",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "build/index.js",
   "author": "Wilhelm Mauch",
   "license": "ISC",
@@ -42,5 +42,11 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
-  }
+  },
+  "pnpm": {
+		"onlyBuiltDependencies": [
+			"core-js-pure",
+			"esbuild"
+		]
+	}
 }
